[Java] Add known repetitive options
IDEA-359245

GitOrigin-RevId: 5cc7305deb0a8dcd98989e5ba03641ad8c4f523d